# creatures

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  TODO.org  aclocal.m4  animat.cpp  configure  configure.ac  drawstuff.cpp  myconfigure  readrun.cpp  readspheric.cpp  visual.cpp
m4/: ac_path_generic.m4  ax_check_gl.m4  ax_check_glu.m4  ax_check_glut.m4
src/: .gitignore  AnimatGenome.h  Makefile  Makefile.am  Makefile.in  animat.cpp  animat.h  animat_eval.cpp  animat_eval.h  animatga.cpp  config.h.in  debug.c  debug.h  grab.cpp  individ_animat.cpp  individ_animat.h  readbest.cpp  readgrab.cpp  readrun.cpp  readruns  readspheric.cpp  run.cpp  runalps.cpp  sphere.cpp  sphere.h  ssga.cpp  testjson.cpp  visual.cpp
support/: Makefile.am  Makefile.in  creatures-config.in
